src/components/DogGame/DogGame.module.css
.background {
    padding: 50px;
    height: 70%;
    background-color: #FF624D;
}

.dogImage {
    margin: 0 auto;
    display: block;
    height: 325px;
    width: 155px;
    background: url(../../resources/hotdog.png);
    background-position: center;
    background-size: cover;
}

.dogImage:hover {
    transition: all .25s;
    transform: scale(1.025);
}

.gameWrapper {
    position: relative;
    height: 325px;
    width: 325px;
    border-radius: 50%;
    background: cornsilk;
    border: 5px solid rgb(231, 222, 185);
}

.plate {
    margin: 0 auto;
    height: 345px;
    padding: 10px;
    width: 345px;
    border-radius: 50%;
    background: rgb(253, 249, 231);
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.24);
}

.rightItem, .leftItem {
    display:block;
    width: 50px;
    height: 50px;
    background:crimson;
}

